syntax = "proto3";

package xb.note.grpc;
option java_outer_classname = "GreetingService";
option java_multiple_files = true;

service HelloService{
	rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest{
	string request = 1;
}

message HelloResponse{
	string response = 1;
}
